--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>xtemplate</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>xtemplate</title>
+  <script src="static/preload.js"></script>
+</head>
+<body>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
 </html>
+<style>
+  html{
+    font-size:100px;
+    margin:0;
+    padding:0;
+  }
+  body{
+    margin:0;
+    padding:0;
+  }
+</style>
