--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>xtemplate</title>
-  <script src="static/preload.js"></script>
 </head>
 <body>
 <div id="app"></div>
@@ -20,5 +19,6 @@
   body{
     margin:0;
     padding:0;
+    background: black;
   }
 </style>
